tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_api_record.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"  腾讯云 API                                                " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"  cloud.tencent.com                                         "
"                                                            "
"  ──────────────────────────────                            "
"                                                            "
"  API 凭证                                                  " Hidden by multi-width symbols: [(7, " "), (9, " ")]
"                                                            "
"  AppID:                                                    "
"    app_1234567890                                          "
"                                                            "
"  SecretKey:                                                "
"    ••••••••                                                "
"                                                            "
"[cloud]                                                     "
"                                                            "
"  创建: 2026-04-15 12:00  更新: 2026-04-15 12:00            " Hidden by multi-width symbols: [(3, " "), (5, " "), (27, " "), (29, " ")]
"                                                            "
"                                                            "
"                                                            "
"                                                            "
