tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_empty.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"                                                  "
"                                                  "
"                         🔐                       " Hidden by multi-width symbols: [(26, " ")]
"                                                  "
"          Select a password to view details       "
"             Press Enter to view details          "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
