tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_health_duplicate.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"  Reused                                                    "
"  reused.com                                                "
"                                                            "
"  ──────────────────────────────                            "
"                                                            "
"  登录信息                                                  " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"                                                            "
"  用户名:                                                   " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"    user                                                    "
"                                                            "
"  密码:                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    ••••••••                                                "
"                                                            "
"  ⚠ 该密码与其他 3 条记录重复 — 建议使用独立密码            " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " ")]
"                                                            "
"  创建: 2026-04-15 12:00  更新: 2026-04-15 12:00            " Hidden by multi-width symbols: [(3, " "), (5, " "), (27, " "), (29, " ")]
"                                                            "
"                                                            "
"                                                            "
"                                                            "
