tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_login_record.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"  GitHub                                                    "
"  github.com                                                "
"★                                                           "
"                                                            "
"  ──────────────────────────────                            "
"                                                            "
"  登录信息                                                  " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"                                                            "
"  用户名:                                                   " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"    octocat                                                 "
"                                                            "
"  密码:                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    ••••••••                                                "
"    强度: ████████████░░░░ 强                               " Hidden by multi-width symbols: [(5, " "), (7, " "), (28, " ")]
"                                                            "
"  网址:                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    https://github.com                                      "
"                                                            "
"  备注:                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    Personal account                                        "
"                                                            "
"[work]  [dev]                                               "
"                                                            "
"  创建: 2026-04-15 12:00  更新: 2026-04-15 12:00            " Hidden by multi-width symbols: [(3, " "), (5, " "), (27, " "), (29, " ")]
"                                                            "
