tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_narrow_width.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"  GitHub                                                                        "
"  github.com                                                                    "
"★                                                                               "
"                                                                                "
"  ────────────────────────────────────────                                      "
"                                                                                "
"  Login                                                                         "
"                                                                                "
"  用户名:                                                                       " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"    octocat                                                                     "
"                                                                                "
"  密码:                                                                         " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    ••••••••                                                                    "
"    Strength: ████████████░░░░ Strong                                           "
"                                                                                "
"  网址:                                                                         " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    https://github.com                                                          "
"                                                                                "
"[work]                                                                          "
"                                                                                "
