tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_ssh_record.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"  Server SSH Key                                            "
"                                                            "
"  ──────────────────────────────                            "
"                                                            "
"  SSH 密钥                                                  " Hidden by multi-width symbols: [(7, " "), (9, " ")]
"                                                            "
"  公钥:                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    ssh-rsa AAAA...                                         "
"                                                            "
"  私钥:                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    ••••••••                                                "
"                                                            "
"  Passphrase:                                               "
"    ••••••••                                                "
"                                                            "
"[servers]                                                   "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
