tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__detail_test__detail_wide_screen.snap
---
source: tests/snapshot_tests/screens/detail_test.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│    GitHub     Favorite                                                                                             │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────   │"
"│                                                                                                                      │"
"│    Login                                                                                                            │"
"│                                                                                                                      │"
"│  ┌────────────────────┬──────────────────────────────────────────────────────────┬────────────────────────────────┐  │"
"│  │   用户名          │ octocat                                                  │                     [  Copy ] │  │" Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " ")]
"│  ├────────────────────┼──────────────────────────────────────────────────────────┼────────────────────────────────┤  │"
"│  │   密码            │ ••••••••                                                 │         [  Show ]  [  Copy ] │  │" Hidden by multi-width symbols: [(9, " "), (11, " ")]
"│  ├────────────────────┼──────────────────────────────────────────────────────────┼────────────────────────────────┤  │"
"│  │   Strength        │ ██████████████████░░░░░░                                 │                         Strong │  │"
"│  ├────────────────────┼──────────────────────────────────────────────────────────┼────────────────────────────────┤  │"
"│  │   网址            │ https://github.com                                       │                     [  Copy ] │  │" Hidden by multi-width symbols: [(9, " "), (11, " ")]
"│  └────────────────────┴──────────────────────────────────────────────────────────┴────────────────────────────────┘  │"
"│                                                                                                                      │"
"│  ┌────────────────────┬──────────────────────────────────────────────────────────┬────────────────────────────────┐  │"
"│  │   Tags            │ [ work ] [ dev ]                                         │                                │  │"
"│  ├────────────────────┼──────────────────────────────────────────────────────────┼────────────────────────────────┤  │"
"│  │   Notes           │ Personal account                                         │                                │  │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
